--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -3,15 +3,32 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:background="@drawable/bkgrnd"
         >
+    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/glob_icon"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/help"
+                android:textSize="@dimen/mainMenu"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/glob_icon"/>
+    </RelativeLayout>
     <TextView
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/help"/>
-    <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="273dp"
-            android:id="@+id/imageView"
-            android:layout_marginLeft="2dp"/>
+            android:layout_height="fill_parent"
+            android:id="@+id/TextView_HelpText"/>
 </LinearLayout>
 
